src/test/ui/consts/validate_never_arrays.64bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/validate_never_arrays.rs:4:29
   |
LL | const _: &[!; 1] = unsafe { &*(1_usize as *const [!; 1]) };
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a reference pointing to uninhabited type [!; 1]

error[E0080]: evaluation of constant value failed
  --> $DIR/validate_never_arrays.rs:8:26
   |
LL | const _: &[!] = unsafe { &*(1_usize as *const [!; 1]) };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a reference pointing to uninhabited type [!; 1]

error[E0080]: evaluation of constant value failed
  --> $DIR/validate_never_arrays.rs:10:26
   |
LL | const _: &[!] = unsafe { &*(1_usize as *const [!; 42]) };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a reference pointing to uninhabited type [!; 42]

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
